Added to Project

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -7,7 +7,7 @@
             <div class="flex flex-col relative px-6 m-8 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
                     <h1 class="text-2xl text-cyan-500">Email</h1>
-                    <p class="text-lg text-cyan-500 text-wrap">wyattwilsonwebdev@gmail .com</p>
+                    <p class="p-6 text-lg text-cyan-500 text-wrap">wyattwilsonwebdev@gmail .com</p>
                 </div>
             </div>
             <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
