--- a/src/components/Hook.astro
+++ b/src/components/Hook.astro
@@ -1,4 +1,4 @@
-<div class="flex grow justify-left relative container p-6 py-12 max-w-full h-[91vh] bg-gradient-to-br from-blue-500 via-cyan-500 to-emerald-500">
+<div class="flex grow justify-left relative container p-6 py-12 max-w-full h-[91svh] bg-gradient-to-br from-blue-500 via-cyan-500 to-emerald-500">
     <div class="flex flex-col my-auto text-left">
         <h1 class="py-3 w-3/4 text-left text-white text-5xl">Hello, thank you for checking out my webpage!</h1>
         <p class="py-3 w-3/4 text-left text-white text-2xl">My goal is to make sure that you have a website that promotes your business or organization and portrays what it's all about.</p>
