Added to Project

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,7 @@
 <div class="container relative flex-col justify-center  max-w-full p-6">
     <h1 class="my-12 mb-18 text-center text-5xl text-cyan-500">About Me</h1>
     <div class="flex md:flex-row flex-col justify-center m-auto text-center md:text-left">
-        <img src="/Facetune_.png" class="md:mx-12 mx-auto md:my-0 mb-6" width="320" height="320"/>
+        <img src="/Facetune_.png" class="md:mx-12 mx-auto md:my-0 mb-6"/>
         <p class="mx-auto md:mx-0 my-auto md:w-1/2 text-xl">I am a freelance web developer located in South Austin looking to make and improve websites across Austin and Houston. I am originally from Houston but have recently moved to Austin to enjoy the city and look for new oppurtunities in the computer science world. I've been programming for about 5 years now and can say that I have genuine passion for anything computer science related, whether it be making websites, building a chess engine, or building a computer from scratch. </p>
     </div>
 </div>
