--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,31 +1,31 @@
 <div class="container flex flex-row flex-wrap justify-left content-center max-w-full bg-image bg-cover">
     <div class="relative flex flex-col content-center ml-0 p-6 md:h-[90vh] bg-white">
         <div class="relative w-full text-center my-12">
-            <h1 class="overflow-hidden h-16 text-5xl text-cyan-500">Contact Info</h1>
+            <h1 class="overflow-hidden h-16 text-5xl text-brand-blue">Contact Info</h1>
         </div>
         <div class="object-none object-center flex flex-row flex-wrap justify-center content-center md:w-[768px]">
-            <div class="flex flex-col relative px-6 m-8 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
+            <div class="flex flex-col relative px-6 m-8 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-cyan-500">Email</h1>
-                    <p class="text-lg text-cyan-500 text-wrap">wyattwilsonwebdev<br />@gmail.com</p>
+                    <h1 class="text-2xl text-brand-blue">Email</h1>
+                    <p class="text-lg text-brand-blue text-wrap">wyattwilsonwebdev<br />@gmail.com</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-cyan-500">Hours of Service</h1>
-                    <p class="text-lg text-cyan-500">M-F 9-5</p>
+                    <h1 class="text-2xl text-brand-blue">Hours of Service</h1>
+                    <p class="text-lg text-brand-blue">M-F 9-5</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-cyan-500">Phone Number</h1>
-                    <p class="text-lg text-cyan-500">(832)-986-3196</p>
+                    <h1 class="text-2xl text-brand-blue">Phone Number</h1>
+                    <p class="text-lg text-brand-blue">(832)-986-3196</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-cyan-500 rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-cyan-500">Areas of Service</h1>
-                    <p class="text-lg text-cyan-500">Austin and Houston Greater Areas</p>
+                    <h1 class="text-2xl text-brand-blue">Areas of Service</h1>
+                    <p class="text-lg text-brand-blue">Austin and Houston Greater Areas</p>
                 </div>
             </div>
         </div>
