--- a/src/components/Hook.astro
+++ b/src/components/Hook.astro
@@ -1,6 +1,12 @@
-<div class="flex grow justify-left relative container p-6 py-12 max-w-full sm:h-[91svh] bg-gradient-to-br from-blue-500 via-cyan-500 to-emerald-500">
-    <div class="flex flex-col my-auto text-left">
-        <h1 class="py-3 w-3/4 text-left text-white text-5xl">Hello, thank you for checking out my webpage!</h1>
-        <p class="py-3 w-3/4 text-left text-white text-2xl">My goal is to make sure that you have a website that promotes your business or organization and portrays what it's all about.</p>
+<div class="flex justify-left relative container p-6 py-0 pl-0 max-w-full sm:h-[91svh] bg-image bg-cover">
+    <div class="flex flex-col md:w-1/2 w-[100vw] h-[91svh] md:bg-gradient-to-br bg-gradient-to-r from-blue-950 md:via-blue-700 via-blue-700/50 md:to-blue-500/50 to-transparent text-left">
+        <h1 class="my-auto mb-0 py-3 px-6 w-full text-left text-white text-5xl">Hello, thank you for checking out my webpage!</h1>
+        <p class="my-auto mt-0 py-3 px-6 w-full text-left text-white text-2xl">My goal is to make sure that you have a website that promotes your business or organization and portrays what it's all about.</p>
     </div>
 </div>
+
+<style>
+    .bg-image {
+        background-image: url('/Crowded Coffee Shop.jpg');
+    }
+</style>
