Added to Project

--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,4 +1,4 @@
-<div class="container relative flex flex-col max-w-full h-[91vh] p-6">
+<div class="container relative flex flex-col max-w-full h-[91vh] p-6 bg-brand-blue/25">
     <h1 class="mx-auto my-12 p-6 text-5xl text-center text-brand-blue">Portfolio</h1>
     <div class="flex flex-wrap jusitfy-center m-auto w-full h-full">
         <div class="relative mx-auto mb-12 md:w-[638px] md:h-[358px] w-[319px] h-[179px] rounded-3xl bg-image bg-cover">
