--- a/src/components/NavSection.astro
+++ b/src/components/NavSection.astro
@@ -1,4 +1,4 @@
-<div class="container relative flex justify-center items-center p-6 max-w-full bg-white">
+<div class="container relative flex justify-center items-center p-6 max-w-full">
     <div class="flex flex-row flex-wrap justify-center">
         <div class="flex flex-col relative mx-8 my-6 p-6 w-96 md:h-96 h-72 border-solid border-2 border-brand-blue rounded-3xl">
             <p class="h-52 text-brand-blue text-2xl">Want to look at my portfolio to see my prior work?</p>
