--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <nav id="navbar" class="container flex justify-between items-center max-w-full p-6 bg-black">
     <a href="/" class="flex my-auto w-50 items-center"><img src="/Favicon.png" width="72" height="55" /></a>
-    <div class="hidden sm:flex flex-row">
+    <div class="hidden sm:flex sm:flex-row">
         <a href="/portfolio" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">Portfolio</a>
         <a href="/about" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">About</a>
         <a href="/contact" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">Contact</a>
