--- a/src/components/Questions.astro
+++ b/src/components/Questions.astro
@@ -1,11 +1,11 @@
 <div class="container relative flex flex-col mb-20 p-6 max-w-full">
     <h1 class="text-center mb-6 p-6 text-6xl text-brand-blue">Questions</h1>
-    <div class="p-6 pt-0 bg-brand-blue text-white rounded-3xl">
-        <div class="flex flex-col my-12 w-4/5">
+    <div class="p-6 pt-0 bg-brand-blue text-white sm:text-left text-center rounded-3xl">
+        <div class="flex flex-col my-12 sm:w-4/5">
             <h1 class="py-6 pt-0 sm:text-4xl text-3xl">What do I do?</h1>
             <p class="text-xl">I offer a variety of web services in the Austin and Houston Greater Areas, including website development, maintenence, or whatever else you need to improve your business through the web.</p>
         </div>
-        <div class="flex flex-col my-12 w-4/5">
+        <div class="flex flex-col my-12 sm:w-4/5">
             <h1 class="py-6 sm:text-4xl text-3xl">Why am I different from any other freelancer or website builder?</h1>
             <p class="text-xl">I have a genuine passion for web design, computer science, and business. As I do whatever service is asked of me, I will be motivated to provide the best possible product or service because I actually enjoy doing so, not just for a paycheck.</p>
         </div>
