Added to Project

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,31 +1,31 @@
 <div class="container flex flex-row flex-wrap justify-left content-center max-w-full bg-image bg-cover">
-    <div class="relative flex flex-col content-center ml-0 p-6 md:h-[90vh] bg-white">
+    <div class="relative flex flex-col content-center ml-0 p-6 md:h-[91vh] bg-gradient-to-br from-slate-700 via-slate-700/75 to-blue-700/50">
         <div class="relative w-full text-center my-12">
-            <h1 class="overflow-hidden h-16 text-5xl text-brand-blue">Contact Info</h1>
+            <h1 class="overflow-hidden h-16 text-6xl text-white">Contact Info</h1>
         </div>
         <div class="object-none object-center flex flex-row flex-wrap justify-center content-center md:w-[768px]">
-            <div class="flex flex-col relative px-6 m-8 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
+            <div class="flex flex-col relative px-6 m-8 py-auto w-80 h-44 border-solid border-2 border-white rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-brand-blue">Email</h1>
-                    <p class="text-lg text-brand-blue text-wrap">wyattwilsonwebdev<br />@gmail.com</p>
+                    <h1 class="text-2xl text-white">Email</h1>
+                    <p class="text-lg text-white text-wrap">wyattwilsonwebdev<br />@gmail.com</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 border-solid border-2 border-white rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-brand-blue">Hours of Service</h1>
-                    <p class="text-lg text-brand-blue">M-F 9-5</p>
+                    <h1 class="text-2xl text-white">Hours of Service</h1>
+                    <p class="text-lg text-white">M-F 9-5</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 border-solid border-2 border-white rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-brand-blue">Phone Number</h1>
-                    <p class="text-lg text-brand-blue">(832)-986-3196</p>
+                    <h1 class="text-2xl text-white">Phone Number</h1>
+                    <p class="text-lg text-white">(832)-986-3196</p>
                 </div>
             </div>
-            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 bg-white border-solid border-2 border-brand-blue rounded-3xl">
+            <div class="flex flex-col relative m-8 p-6 py-auto w-80 h-44 border-solid border-2 border-white rounded-3xl">
                 <div class="flex flex-col content-center my-auto p-0">
-                    <h1 class="text-2xl text-brand-blue">Areas of Service</h1>
-                    <p class="text-lg text-brand-blue">Austin and Houston Greater Areas</p>
+                    <h1 class="text-2xl text-white">Areas of Service</h1>
+                    <p class="text-lg text-white">Austin and Houston Greater Areas</p>
                 </div>
             </div>
         </div>
@@ -34,6 +34,6 @@
 
 <style>
     .bg-image {
-        background-image: url('/Crowded Coffee Shop.jpg')
+        background-image: url('/Mac.jpg')
     }
 </style>
