--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <nav id="navbar" class="container flex justify-between items-center max-w-full p-6 bg-black">
     <a href="/" class="flex my-auto w-50 items-center"><img src="/Favicon.png" width="72" height="55" /></a>
     <div class="hidden sm:flex sm:flex-row">
-        <a href="/portfolio" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">Portfolio</a>
+        <a href="/portfolio" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">Client Sample</a>
         <a href="/about" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">About</a>
         <a href="/contact" class="ml-6 px-3 py-2 hover:bg-brand-blue hover:rounded-full text-white text-lg duration-500">Contact</a>
     </div>
@@ -10,7 +10,7 @@
 <div class="sm:hidden flex">
     <div id="menu" class="flex-col items-center hidden w-screen text-center bg-black text-white text-lg">
         <a href="/" class="p-6 w-full hover:bg-brand-blue hover:text-white duration-500">Home</a>
-        <a href="/portfolio" class="p-6 w-full hover:bg-brand-blue hover:text-white duration-500">Portfolio</a>
+        <a href="/portfolio" class="p-6 w-full hover:bg-brand-blue hover:text-white duration-500">Client Sample</a>
         <a href="/about" class="p-6 w-full hover:bg-brand-blue hover:text-white duration-500">About</a>
         <a href="/contact" class="p-6 w-full hover:bg-brand-blue hover:text-white duration-500">Contact</a>
     </div>
