--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,7 @@ import Navbar from '../components/Navbar.astro'
 		<title>Wyatt Wilson Web Development</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<Navbar />
@@ -25,6 +24,6 @@ import Navbar from '../components/Navbar.astro'
 		overflow-x: hidden;
 		margin: 0;
 		padding: 0;
-		font-family: Poppins, sans-serif;
+		font-family: Inter, sans-serif;
 	}
 </style>
