--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,17 +1,26 @@
-<div class="container relative flex flex-col p-6 mb-20 max-w-full">
-    <h1 class="text-center mb-6 p-6 text-6xl text-brand-blue ">Services</h1>
-    <div class="p-6 pt-0 bg-brand-blue text-white sm:text-left text-center rounded-3xl">
-        <div class="flex flex-col my-12 sm:w-4/5">
-            <h1 class="py-6 pt-0 sm:text-4xl text-3xl">Website Design and Development</h1>
-            <p class="text-xl">I can make you a website that perfectly fits what your business or organization needs. Whether you need an eCommerce platform, complex animations, or just a simple web page to promote, I can do it for you.</p>
-        </div>
-        <div class="flex flex-col my-12 sm:w-4/5">
-            <h1 class="py-6 sm:text-4xl text-3xl">Website Maintenence</h1>
-            <p class="text-xl">If you want to update your website to keep up with the competition or have some under the hood issues that need to be fixed, I am more than capable of taking care of that for you.</p>
-        </div>
-        <div class="flex flex-col my-12 sm:w-4/5">
-            <h1 class="py-6 sm:text-4xl text-3xl">Anything Else</h1>
-            <p class="text-xl">If there are any other web related services that you need that don't necessarily fit the categories above, I will be more than happy to provide that service given it is a reasonable request.</p>
+<div class="container relative flex flex-col mb-20 max-w-full">
+    <div class="mx-auto bg-image text-black">
+        <div class="p-6 bg-brand-blue/50 text-white text-center">
+            <h1 class="text-center mx-auto mb-6 p-6 px-0 text-6xl text-white">Services</h1>
+            <div class="flex flex-col mx-auto my-12">
+                <h1 class="py-6 pt-0 sm:text-4xl text-3xl">Website Design and Development</h1>
+                <p class="text-xl">I can make you a website that perfectly fits what your business or organization needs. Whether you need an eCommerce platform, complex animations, or just a simple web page to promote, I can do it for you.</p>
+            </div>
+            <div class="flex flex-col mx-auto my-12">
+                <h1 class="py-6 sm:text-4xl text-3xl">Website Maintenence</h1>
+                <p class="text-xl">If you want to update your website to keep up with the competition or have some under the hood issues that need to be fixed, I am more than capable of taking care of that for you.</p>
+            </div>
+            <div class="flex flex-col mx-auto my-12">
+                <h1 class="py-6 sm:text-4xl text-3xl">Anything Else</h1>
+                <p class="text-xl">If there are any other web related services that you need that don't necessarily fit the categories above, I will be more than happy to provide that service given it is a reasonable request.</p>
+            </div>
         </div>
     </div>
 </div>
+
+<style>
+    .bg-image {
+        background-image: url('/Office.jpg');
+        background-size: cover;
+    }
+</style>
