--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,6 @@ import Services from "../components/Services.astro";
 <style>
     html {
         scroll-behavior: smooth;
+        background-color: black;
     }
 </style>
