--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,5 +1,5 @@
 <div class="container relative flex flex-col max-w-full h-[91vh] p-6 bg-gradient-to-br from-slate-700 via-slate-700 to-blue-700">
-    <h1 class="mx-auto my-12 p-6 text-6xl text-center text-white">Client Sample</h1>
+    <h1 class="overflow-hidden mx-auto my-12 p-6 text-6xl text-center text-white">Client Sample</h1>
     <div class="flex flex-wrap jusitfy-center m-auto w-full h-full">
         <div class="relative mx-auto mb-12 md:w-[638px] md:h-[358px] w-[319px] h-[179px] rounded-3xl bg-image bg-cover">
             <a href="https://www.topshelfchauffeur.com" class="absolute bottom-6 right-6 hover:bottom-5 hover:right-5 px-3 py-2 hover:px-4 hover:py-3 hover:text-lg bg-brand-blue text-white rounded-full duration-500">Top Shelf Chauffeur</a>
