--- a/src/components/NavSection.astro
+++ b/src/components/NavSection.astro
@@ -1,16 +1,16 @@
 <div class="container relative flex justify-center items-center p-6 max-w-full">
     <div class="flex flex-row flex-wrap justify-center">
-        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 md:h-96 h-72 border-solid border-2 border-white rounded-3xl">
+        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 h-72 border-solid border-2 border-white rounded-2xl">
             <p class="h-52 text-white text-2xl">Want to look at a client sample to see my prior work?</p>
-            <a href="/portfolio" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-solid border-2 border-white text-white hover:bg-brand-blue hover:text-white rounded-full duration-500">Go Here</a>
+            <a href="/portfolio" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-white border-2 border-solid text-white hover:text-white hover:bg-brand-blue rounded-full duration-500">Go Here</a>
         </div>
-        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 md:h-96 h-72 border-solid border-2 border-white rounded-3xl">
+        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 h-72 border-solid border-2 border-white rounded-2xl">
             <p class="h-52 text-white text-2xl">Want to learn more about me?</p>
-            <a href="/about" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-solid border-2 border-white text-white hover:bg-brand-blue hover:text-white rounded-full duration-500">Go Here</a>
+            <a href="/about" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-white border-2 border-solid text-white hover:bg-brand-blue rounded-full duration-500">Go Here</a>
         </div>
-        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 md:h-96 h-72 border-solid border-2 border-white rounded-3xl">
+        <div class="flex flex-col relative mx-8 my-6 p-6 w-96 h-72 border-solid border-2 border-white rounded-2xl">
             <p class="h-52 text-white text-2xl">Want to contact me to get started making your website today?</p>
-            <a href="/contact" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-solid border-2 border-white text-white hover:bg-brand-blue hover:text-white rounded-full duration-500">Go Here</a>
+            <a href="/contact" class="absolute bottom-6 right-6 mx-auto px-3 py-2 border-white border-2 border-solid text-white hover:bg-brand-blue rounded-full duration-500">Go Here</a>
         </div>
     </div>
 </div>
