--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <div class="sm:hidden container relative flex justify-center content-center my-6 max-w-full h-20">
-    <a class="m-auto px-3 py-2 text-white hover:bg-brand-blue rounded-full duration-500 rounded-full" href="#navbar">Back to Top</p>
+    <a class="m-auto px-3 py-2 text-white sm:hover:bg-brand-blue rounded-full duration-500 rounded-full" href="#navbar">Back to Top</p>
 </div>
