--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,9 @@ import Navbar from '../components/Navbar.astro'
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="description" content="Website Developer Austin Houston" />
 		<link rel="icon" href="/Favicon.png" />
 		<title>Wyatt Wilson Web Development</title>
+		<meta name="description" content="Website Design and Development in the Austin and Houston Greater Areas"
 		<link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&display=swap" rel="stylesheet">
